# AlBDO-v-0.1.0

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: release-binaries-main.yml
assets/: albedo-wt-bootstrap.js  stress.md
crates/albedo-node/: Cargo.toml  package.json
crates/albedo-node/scripts/: build-native.cjs
crates/albedo-node/src/: lib.rs
crates/albedo-server/: Cargo.toml
crates/albedo-server/src/: config.rs  lib.rs  renderer_runtime.rs  server.rs  webtransport.rs
crates/albedo-server/src/handlers/: mod.rs  streaming.rs
professionalization/: PLAN.md
src/: incremental.rs  lib.rs
src/analysis/: adaptive.rs  analyzer.rs  mod.rs  parallel.rs  parallel_topo.rs  topological.rs
src/bundler/: emit.rs
src/dev/: benchmark.rs  contract.rs  mod.rs  showcase.rs
src/hydration/: payload.rs
src/manifest/: builder.rs  mod.rs  schema.rs
src/runtime/: ast_eval.rs  engine.rs  mod.rs  pipeline.rs  quickjs_engine.rs  renderer.rs  scheduler.rs  webtransport.rs
src/runtime/eval/: component.rs  core.rs  expr.rs  mod.rs
src/runtime/renderer/: core.rs  manifest.rs  mod.rs
tests/: bundler_emit_integration_tests.rs  phase0_golden_correctness_tests.rs  production_cache_tests.rs  visual_runtime_tests.rs
tests/fixtures/components/: App.jsx  Button.jsx  FeatureCard.jsx  Features.jsx  Footer.jsx  Header.jsx  HeroImage.jsx  Navigation.jsx
tests/fixtures/golden/: canonical_ir_test_app_components.json  manifest_v2_test_app_components.json
