[package]
name              = "albedo-node"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dom-render-compiler.workspace = true
napi.workspace                = true
napi-derive.workspace         = true
once_cell.workspace           = true
serde_json.workspace          = true

[build-dependencies]
napi-build = "2.1"
