[package]
name              = "albedo-server"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dependencies]
async-trait.workspace          = true
async-stream.workspace         = true
axum.workspace                 = true
bytes.workspace                = true
dom-render-compiler.workspace  = true
futures-util.workspace         = true
http.workspace                 = true
matchit.workspace              = true
serde.workspace                = true
serde_json.workspace           = true
thiserror.workspace            = true
tokio.workspace                = true
tokio-stream.workspace         = true
tracing.workspace              = true
url.workspace                  = true
uuid.workspace                 = true
quinn.workspace                = true
rustls-pemfile.workspace       = true
rustls-pki-types.workspace     = true

[dev-dependencies]
tower.workspace = true
